Prevent docsat stars from wrapping when page titles are very long.

--- a/_src/docs.css
+++ b/_src/docs.css
@@ -274,7 +274,8 @@ hr {
   flex-grow: 1;
 }
 .title .corner-floated {
-  width: 160px;
+  white-space: nowrap;
+  width: 170px;
   margin-top: 40px;
   text-align: right;
 }
